--- a/frontend/src/app/shared/nav/nav.component.html
+++ b/frontend/src/app/shared/nav/nav.component.html
@@ -1,1 +1,51 @@
-<p>nav works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" [routerLink]="['/home']"><img src="assets/img/logo.png" alt="Logo" class="logo"> </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown" >
+        <ul class="navbar-nav ms-auto" >
+          <li class="nav-item ">
+            <a class="nav-link" [routerLink]="['/home']" routerLinkActive="activebutton">Inicio</a>
+          </li>
+          <li class="nav-item dropdown ">
+            <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+             Areas turisticas
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" [routerLink]="['/valle-de-traslasierra']">Valle de Traslasierras</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/valle-de-punilla']">Valle de Punilla</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/valle-de-calamuchita']">Valle de Calamuchita</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/valle-de-paravachasca']">Valle de Paravachasca</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/norte-y-noreste']">Norte y Noroeste</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/sierras-chicas']">Sierras Chicas</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/cordoba-capital']">Cordoba Capital</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+             Actividades turisticas
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" [routerLink]="['/parques-nacionales']">Parques Nacionales</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/astroturismo']">Astroturismo</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/turismo-aventura']">Turismo Aventura</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/camino-del-vino']">Camino del Vino</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/turismo-religioso']">Turismo Religioso</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/sobre-nosotros']" routerLinkActive="activebutton">Sobre nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/contacto']" routerLinkActive="activebutton">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/login']" routerLinkActive="activebutton">Login</a>
+          </li>                 
+          
+        </ul>
+      </div>
+    </div>
+  </nav>
