añadido paquetes turisticos al navbar

--- a/frontend/src/app/shared/nav/nav.component.html
+++ b/frontend/src/app/shared/nav/nav.component.html
@@ -35,6 +35,17 @@
               <li><a class="dropdown-item" [routerLink]="['/turismo-religioso']">Turismo Religioso</a></li>
             </ul>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+             Paquetes turisticos
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-cba']">paquete turistico cba</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-cpaz']">paquete turistico cpaz</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-la-cumbrecita']">Paquete turistico la cumbrecita</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-traslasierra']">Paquete turistico traslasierra</a></li>
+            </ul>
+          </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/sobre-nosotros']" routerLinkActive="activebutton">Sobre nosotros</a>
           </li>
