--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,1 +1,41 @@
-<p>login works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3>Ingresar</h3>
+    </div>
+  </div>
+  <form class="row g-md-1 bg-danger">
+    <div class=" col-2  m-2">
+      <label for="email">Ingrese su correo eléctronico:</label>
+      <input
+        type="email"
+        id="email"
+        placeholder="Ej: correo12@gmail.com"
+        class="form-control"
+      />
+    </div>
+    <br />
+    <div class="col-lg-12 col-6 m-2">
+      <label for="password">Ingrese su contraseña:</label>
+      <input
+        type="password"
+        id="password"
+        minlength="8"
+        maxlength="16"
+        class="form-control"
+        placeholder="password"
+        aria-label="Contraseña"
+      />
+    </div>
+    <br />
+
+    <div class="col-6 col-md-12 text-center m-3">
+      <p class="warning" id="warning"></p>
+      <button class="btn btn-success" type="submit">Enviar</button>
+    </div>
+    <p>
+      ¿Aun no te has registrado? Ingresa acá
+      <a href="registrarse.html">Registrate</a>
+    </p>
+  </form>
+</div>
