--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,1 +1,56 @@
-<p>footer works!</p>
+<div id="footerPagina"> 
+    <div class="container-footer-all">
+        <div class="container-body">
+        
+        
+            <div class="column1"> 
+                <h1> Mas informacion de la Compañia</h1>
+                <p>Conociendo Cordoba ofrece a sus usuarios un abanico infinito de opciones para que el visitante se lleve la mejor de las experiencias.</p>
+                <div class="cookies"><a href="cookies.html"><p>Politicas de Coockies</p></a> </div>
+            </div>
+
+            <div class="column2">
+                <H1> Redes Sociales</H1>
+                <div class="row1">
+                <!-- <img src="imagenes/face.jpg"> -->
+                <label> Facebook </label>
+            </div>
+
+            <div class="row1">
+                <!-- <img src="imagenes/insta.jpg">  -->
+                <label> Instagram </label>
+            </div>
+
+            <div class="row1">
+                <!-- <img src="imagenes/twitter.jpg">  -->
+                <label> Twitter </label> 
+            </div>
+
+    </div>
+        
+
+    <div class="column3">
+    
+        <h1> Información Contactos</h1>
+        <div class="row2"> 
+            <!-- <img src="imagenes/casa.jpg"> -->
+            <label> Contamos con los siguientes medios de comunicación:</label>
+        </div>
+
+        <div class="row2"> 
+            <!-- <img src="imagenes/whatsapp.jpg"> -->
+            <label> Cel. 2494-454541 </label>
+        </div>
+
+        <div class="row2"> 
+            <!-- <img src="imagenes/correo.jpg"> -->
+            <label> correo electronico: ConociendoCordoba@hotmail.com </label>
+        </div>
+                
+        <div class="container-footer">
+            <div class="copyright"> © 2022 Conociendo Cordoba, Inc.</div>
+           
+        </div>   
+    </div>
+    
+</div>
