se finaliza carga de componentes designados

--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -12,17 +12,17 @@
             <div class="column2">
                 <H1> Redes Sociales</H1>
                 <div class="row1">
-                <!-- <img src="imagenes/face.jpg"> -->
+                <img src="../../../assets/img/face.jpg">
                 <label> Facebook </label>
             </div>
 
             <div class="row1">
-                <!-- <img src="imagenes/insta.jpg">  -->
+                <img src="../../../assets/img/insta.jpg"> 
                 <label> Instagram </label>
             </div>
 
             <div class="row1">
-                <!-- <img src="imagenes/twitter.jpg">  -->
+                <img src="../../../assets/img/twitter.jpg"> 
                 <label> Twitter </label> 
             </div>
 
@@ -33,17 +33,17 @@
     
         <h1> Información Contactos</h1>
         <div class="row2"> 
-            <!-- <img src="imagenes/casa.jpg"> -->
+            <img src="../../../assets/img/casa.jpg">
             <label> Contamos con los siguientes medios de comunicación:</label>
         </div>
 
         <div class="row2"> 
-            <!-- <img src="imagenes/whatsapp.jpg"> -->
+            <img src="../../../assets/img/whatsapp.jpg">
             <label> Cel. 2494-454541 </label>
         </div>
 
         <div class="row2"> 
-            <!-- <img src="imagenes/correo.jpg"> -->
+            <img src="../../../assets/img/correo.jpg">
             <label> correo electronico: ConociendoCordoba@hotmail.com </label>
         </div>
                 
