--- a/frontend/src/app/vistas/home/home.component.html
+++ b/frontend/src/app/vistas/home/home.component.html
@@ -1,4 +1,11 @@
+
+
+
 <div>
+  <div id="portada">
+
+    <h1>Conociendo Córdoba</h1>
+  </div>
     <!--PARTE NUEVA-->
   <section class="primeraparte">
 
@@ -13,11 +20,11 @@
       <p>Crea recuerdos más duraderos a través de una explosión de inspiración y propósito. Y deja que el espíritu de <a
           href="cordoba_capital.html">Córdoba</a> desate un sentido de pertenencia.</p>
     </div>
-    <div class="fotocordoba"> <img class="tamaniofoto" src="imagenes/catedral.jpg" alt="Catedral de Córdoba">
+    <div class="fotocordoba"> <img class="tamaniofoto" src="../../../assets/img/catedral.jpg" alt="Catedral de Córdoba">
     </div>
   </section>
   <section class="segundaparte">
-    <div class="fotocentrada"><img class="tamaniofoto1" src="imagenes/d.jpg" alt="Nacimiento del rio Mina Clavero">
+    <div class="fotocentrada"><img class="tamaniofoto1" src="../../../assets/img/d.jpg" alt="Nacimiento del rio Mina Clavero">
     </div>
 
     <div class="introduccion1">
@@ -39,12 +46,12 @@
       <p>Si todavia no estas registrado podes hacerlo dando click en el siguiente boton</p>
       <button class="boton"><a href="login.html">Log in</a> </button>
     </div>
-    <div class="fotocordoba"> <img class="tamaniofoto" src="imagenes/DSC07020.jpg" alt="foto">
+    <div class="fotocordoba"> <img class="tamaniofoto" src="../../../assets/img/DSC07020.jpg" alt="foto">
     </div>
   </section>
 
   <section class="cuartaparte">
-    <div class="fotocentrada"><img class="tamaniofoto1" src="imagenes/astro4.jpg" alt="Astrofotogracia en Córdoba">
+    <div class="fotocentrada"><img class="tamaniofoto1" src="../../../assets/img/astro4.jpg" alt="Astrofotogracia en Córdoba">
     </div>
 
     <div class="astro">
@@ -73,38 +80,38 @@
 
       <div class="col-lg-4 col-sm-4" id="a">
 
-        <img src="imagenes/a.jpg" class="img-fluid" class="img-thumbnail">
+        <img src="../../../assets/img/a.jpg" class="img-fluid" class="img-thumbnail">
         <p><a href="areas_turisticas.html">Áreas turisticas</a> </p>
 
       </div>
       <div class="col-lg-4 col-sm-4" id="b">
 
-        <img src="imagenes/o.jpg" class="img-fluid" class="img-thumbnail">
+        <img src="../../../assets/img/o.jpg" class="img-fluid" class="img-thumbnail">
         <p><a href="astroturismo.html">Astrofotografia</a> </p>
 
       </div>
       <div class="col-lg-4 col-sm-4" id="c">
 
-        <img src="imagenes/c.jpg" class="img-fluid" class="img-thumbnail">
+        <img src="../../../assets/img/c.jpg" class="img-fluid" class="img-thumbnail">
         <p> <a href="actividades_turisticas.html">Actividades turisticas</a></p>
 
       </div>
 
       <div class="col-lg-4 col-sm-4" id="d">
 
-        <img src="imagenes/d.jpg" class="img-fluid" class="img-thumbnail">
+        <img src="../../../assets/img/d.jpg" class="img-fluid" class="img-thumbnail">
         <p> <a href="cordoba_capital.html">Córdoba Capital</a></p>
 
       </div>
       <div class="col-lg-4 col-sm-4" id="e">
 
-        <img src="imagenes/santa catalina.jpg" class="img-fluid" class="img-thumbnail">
+        <img src="../../../assets/img/santa catalina.jpg" class="img-fluid" class="img-thumbnail">
         <p> <a href="turismo_religioso.html">Turismo Religioso</a></p>
 
       </div>
       <div class="col-lg-4 col-sm-4" id="f">
 
-        <img src="imagenes/f.jpg" class="img-fluid" class="img-thumbnail">
+        <img src="../../../assets/img/f.jpg" class="img-fluid" class="img-thumbnail">
         <p> <a href="parques_nacionales.html">Parques Nacionales</a></p>
       </div>
 
