--- a/frontend/src/app/shared/nav/nav.component.html
+++ b/frontend/src/app/shared/nav/nav.component.html
@@ -1,17 +1,19 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<header class="header">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" [routerLink]="['/home']"><img src="assets/img/logo.png" alt="Logo" class="logo"> </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown" >
-        <ul class="navbar-nav ms-auto" >
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item ">
             <a class="nav-link" [routerLink]="['/home']" routerLinkActive="activebutton">Inicio</a>
           </li>
           <li class="nav-item dropdown ">
-            <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
-             Areas turisticas
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Areas turisticas
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" [routerLink]="['/valle-de-traslasierra']">Valle de Traslasierras</a></li>
@@ -25,7 +27,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-             Actividades turisticas
+              Actividades turisticas
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" [routerLink]="['/parques-nacionales']">Parques Nacionales</a></li>
@@ -37,13 +39,15 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-             Paquetes turisticos
+              Paquetes turisticos
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-cba']">paquete turistico cba</a></li>
               <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-cpaz']">paquete turistico cpaz</a></li>
-              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-la-cumbrecita']">Paquete turistico la cumbrecita</a></li>
-              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-traslasierra']">Paquete turistico traslasierra</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-la-cumbrecita']">Paquete turistico la
+                  cumbrecita</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-traslasierra']">Paquete turistico
+                  traslasierra</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -54,9 +58,15 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/login']" routerLinkActive="activebutton">Login</a>
-          </li>                 
-          
+          </li>
+
         </ul>
       </div>
     </div>
   </nav>
+  <!-- <div id="portada">
+
+    <h1>Conociendo Córdoba</h1>
+  </div> -->
+  
+</header>
