añadido iconos al navbar y modificado estilos del formulario

--- a/frontend/src/app/auth/registro/registro.component.html
+++ b/frontend/src/app/auth/registro/registro.component.html
@@ -1,11 +1,19 @@
 <div class="container">
   <div class="row vh-100 d-flex justify-content-center align-items-center">
-    <div class="col-12 col-md-6">
+    <div class="col-12 text-center">
+      <h1>Bienvenido a Conociendo Córdoba</h1>
+    </div>
+    <div class="col-12 col-md-4">
       <form class="border p-3">
         <fieldset>
-          <legend class="text-center fs-1">Bienvenido a Conociendo Córdoba</legend>
+          <legend class="text-center fs-1"></legend>
+         <div class="row">
+          <div class="col-4 mx-auto">
+            <img src="/assets/img/profile.svg" class="img-thumbnail" alt="" srcset="">
+          </div>
+         </div>
           <div class="mb-3">
-            <label for="name" class="form-label fs-5">Nombre</label>
+            <label for="name" class="form-label ">Nombre</label>
             <input
               type="text"
               id="name"
@@ -14,7 +22,7 @@
             />
           </div>
           <div class="mb-3">
-            <label for="apellido" class="form-label fs-5">Apellido</label>
+            <label for="apellido" class="form-label ">Apellido</label>
             <input
               type="text"
               id="apellido"
@@ -23,7 +31,7 @@
             />
           </div>
           <div class="mb-3">
-            <label for="fecha de nacimiento" class="fs-5"
+            <label for="fecha de nacimiento" class=""
               >Fecha de nacimiento</label
             >
             <input
@@ -35,7 +43,7 @@
             />
           </div>
           <div class="mb-3">
-            <label for="genero" class="fs-5">Género</label>
+            <label for="genero" class="">Género</label>
             <select name="genero" id="sexo" class="form-select">
               <option value="seleccion">Seleccione una opción</option>
               <option value="masculino">Masculino</option>
@@ -44,7 +52,7 @@
             </select>
           </div>
           <div class="mb-3">
-            <label for="email" class="form-label fs-5"
+            <label for="email" class="form-label "
               >Correo electrónico</label
             >
             <input
@@ -55,18 +63,7 @@
             />
           </div>
           <div class="mb-3">
-            <label for="password" class="form-label fs-5">Contraseña</label>
-            <input
-              type="password"
-              id="password"
-              class="form-control"
-              placeholder="password123"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label fs-5"
-              >Reingrese su contraseña</label
-            >
+            <label for="password" class="form-label ">Contraseña</label>
             <input
               type="password"
               id="password"
