--- a/frontend/src/app/shared/nav/nav.component.html
+++ b/frontend/src/app/shared/nav/nav.component.html
@@ -7,10 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown" >
         <ul class="navbar-nav ms-auto" >
           <li class="nav-item ">
-            <a class="nav-link" [routerLink]="['/home']" routerLinkActive="activebutton">Inicio</a>
+            <a class="nav-link" [routerLink]="['/home']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-house"></i> Inicio</a>
           </li>
           <li class="nav-item dropdown ">
-            <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#"  role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-sharp fa-solid fa-map-location"></i>
              Areas turisticas
             </a>
             <ul class="dropdown-menu">
@@ -24,19 +24,19 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-sharp fa-solid fa-person-walking-luggage"></i>
              Actividades turisticas
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" [routerLink]="['/parques-nacionales']">Parques Nacionales</a></li>
-              <li><a class="dropdown-item" [routerLink]="['/astroturismo']">Astroturismo</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/astroturismo']"> Astroturismo</a></li>
               <li><a class="dropdown-item" [routerLink]="['/turismo-aventura']">Turismo Aventura</a></li>
               <li><a class="dropdown-item" [routerLink]="['/camino-del-vino']">Camino del Vino</a></li>
               <li><a class="dropdown-item" [routerLink]="['/turismo-religioso']">Turismo Religioso</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-sharp fa-solid fa-box"></i>
              Paquetes turisticos
             </a>
             <ul class="dropdown-menu">
@@ -47,13 +47,13 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/sobre-nosotros']" routerLinkActive="activebutton">Sobre nosotros</a>
+            <a class="nav-link" [routerLink]="['/sobre-nosotros']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-address-card"></i> Sobre nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/contacto']" routerLinkActive="activebutton">Contacto</a>
+            <a class="nav-link" [routerLink]="['/contacto']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-address-book"></i> Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/login']" routerLinkActive="activebutton">Login</a>
+            <a class="nav-link" [routerLink]="['/login']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-right-to-bracket"></i> Login</a>
           </li>                 
           
         </ul>
