--- a/frontend/src/app/vistas/astroturismo/astroturismo.component.html
+++ b/frontend/src/app/vistas/astroturismo/astroturismo.component.html
@@ -1,87 +1,112 @@
 
 <div>
-    <div style="background-image: url(../../../assets/img/33.jpg)" id="portada">
-         <h1>Astroturismo</h1>
-    </div>
-<main>
-    
- <div>
 
-    <section class="caja1">
-        <h3>Astroturismo</h3><br>
-        
-        <p>Alejándonos de la contaminación lumínica de las ciudades se puede tener acceso a un cielo plagado de infinitas estrellas.</p>
-        <p>Al realizar las observaciones a cielo abierto en contextos naturales fuera de lo urbano, el observador puede desconectarse de su vida rutinaria para conectarse con el cielo nocturno y los astros.Los cielos limpios despejados de la contaminación urbana encienden la luz de las estrellas, lo que nos da la posibilidad de conocer las estrellas vecinas que se esparcen por el cosmos. </p>
-        <p>Una vez lejos de las grandes ciudades en una noche despejada, los prestadores turísticos habilitados por la Agencia Córdoba Turismo desarrollan distintos tipos de actividades para interactuar con el cielo nocturno a través de una charlas, explicaciones, observación, fotografías que brindan la posibilidad a quien realiza la experiencia de contextualizarse en medio de la inmensidad bajo un espectáculo de estrellas.</p>
-        <br>
+  <div style="background-image: url(../../../assets/33.jpg)" id="portada">
+    <h1>Astroturismo</h1>
+  </div>
 
-      <div class="fotos">
-        <div class="foto"><img src="../../../assets/img/astro4.jpg" alt=""></div>
-        <div class="foto"><img src="../../../assets/img/astro2.jpg" alt=""></div>
-        <div class="foto"><img src="../../../assets/img/astro9.jpg" alt=""></div>
-      </div>
+  <main>
+    <div>
+       <section class="caja1">
+      <h3>Astroturismo</h3><br>
 
-    </section>
+      <p>Alejándonos de la contaminación lumínica de las ciudades se puede tener
+        acceso a un cielo plagado de infinitas estrellas.</p>
+      <p>Al realizar las observaciones a cielo abierto en contextos naturales
+        fuera de lo urbano, el observador puede desconectarse de su vida
+        rutinaria para conectarse con el cielo nocturno y los astros.Los cielos
+        limpios despejados de la contaminación urbana encienden la luz de las
+        estrellas, lo que nos da la posibilidad de conocer las estrellas vecinas
+        que se esparcen por el cosmos. </p>
+      <p>Una vez lejos de las grandes ciudades en una noche despejada, los
+        prestadores turísticos habilitados por la Agencia Córdoba Turismo
+        desarrollan distintos tipos de actividades para interactuar con el cielo
+        nocturno a través de una charlas, explicaciones, observación,
+        fotografías que brindan la posibilidad a quien realiza la experiencia de
+        contextualizarse en medio de la inmensidad bajo un espectáculo de
+        estrellas.</p>
+      <br>
 
-    <section id="slider"> 
+       </section>
+
+         <div class="fotos">
+      <div class="foto"><img src="../../../assets/astro4.jpg" alt=""></div>
+      <div class="foto"><img src="../../../assets/astro2.jpg" alt=""></div>
+      <div class="foto"><img src="../../../assets/astro9.jpg" alt=""></div>
+         </div>
+
+
+     <section id="slider">
         <h3 class="titulo_galeria">Galeria de fotos</h3>
 
-    <div id="caja">
-     
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel"></div>
-          <div class="carousel-inner"></div>  
-        <div class="carousel-item active">
-          <img src="../../../assets/img/j.jpg" class="d-block w-100"  class="img-fluid" alt="astrofotografia">
+        <div id="caja">
+
+          <div id="carouselExampleControls" class="carousel slide"
+          data-bs-ride="carousel">
+          </div>
+          <div class="carousel-inner"></div>
+          <div class="carousel-item active">
+           <img src="../../../assets/img/j.jpg" class="d-block w-100"
+            class="img-fluid" alt="astrofotografia">
+          </div>
+          <div class="carousel-item">
+           <img src="../../../assets/img/astro10.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/k.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/l.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/astro6.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/astro7.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/j.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/k.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/l.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/m.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/n.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../../../assets/img/o.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+           <img src="../../../assets/img/p.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
+          <div class="carousel-item">
+           <img src="../../../assets/img/astro9.jpg" class="d-block w-100"
+            class="img-fluid" alt="...">
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="../../../assets/img/astro10.jpg" class="d-block w-100"  class="img-fluid"  alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="../../../assets/img/k.jpg" class="d-block w-100"  class="img-fluid" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="../../../assets/img/l.jpg" class="d-block w-100"  class="img-fluid"  alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="../../../assets/img/astro6.jpg" class="d-block w-100"  class="img-fluid"  alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="../../../assets/img/astro7.jpg" class="d-block w-100"  class="img-fluid" alt="...">
-        </div>
-        <div class="carousel-item">
-        <img src="../../../assets/img/j.jpg" class="d-block w-100"  class="img-fluid"  alt="...">
-        </div>
-        <div class="carousel-item">
-        <img src="../../../assets/img/k.jpg" class="d-block w-100"  class="img-fluid" alt="...">
-        </div>
-        <div class="carousel-item">
-        <img src="../../../assets/img/l.jpg" class="d-block w-100"  class="img-fluid"  alt="...">
-        </div>
-        <div class="carousel-item">
-        <img src="../../../assets/img/m.jpg" class="d-block w-100"  class="img-fluid"  alt="...">
-        </div>
-        <div class="carousel-item">
-        <img src="../../../assets/img/n.jpg" class="d-block w-100"  class="img-fluid" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../assets/img/o.jpg" class="d-block w-100"  class="img-fluid"  alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="../../../assets/img/p.jpg" class="d-block w-100"  class="img-fluid" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="../../../assets/img/astro9.jpg" class="d-block w-100"  class="img-fluid" alt="...">
-        </div>
+
+     </section>
     </div>
-    
-
-        
-    </section>
-
- </div>
-
-    
-
-</main>
-
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </div>
+
+
