--- a/frontend/src/app/vistas/astroturismo/astroturismo.component.html
+++ b/frontend/src/app/vistas/astroturismo/astroturismo.component.html
@@ -1,14 +1,14 @@
 
 <div>
 
-  <div style="background-image: url(../../../assets/33.jpg)" id="portada">
+  <div style="background-image: url(../../../assets/img/33.jpg)" id="portada">
     <h1>Astroturismo</h1>
   </div>
 
   <main>
     <div>
        <section class="caja1">
-      <h3>Astroturismo</h3><br>
+      
 
       <p>Alejándonos de la contaminación lumínica de las ciudades se puede tener
         acceso a un cielo plagado de infinitas estrellas.</p>
@@ -30,80 +30,70 @@
        </section>
 
          <div class="fotos">
-      <div class="foto"><img src="../../../assets/astro4.jpg" alt=""></div>
-      <div class="foto"><img src="../../../assets/astro2.jpg" alt=""></div>
-      <div class="foto"><img src="../../../assets/astro9.jpg" alt=""></div>
+          <div class="foto"><img src="../../../assets/img/astro4.jpg" alt=""></div>
+          <div class="foto"><img src="../../../assets/img/astro2.jpg" alt=""></div>
+          <div class="foto"><img src="../../../assets/img/astro9.jpg" alt=""></div>
          </div>
-
-
-     <section id="slider">
-        <h3 class="titulo_galeria">Galeria de fotos</h3>
-
-        <div id="caja">
-
-          <div id="carouselExampleControls" class="carousel slide"
-          data-bs-ride="carousel">
+        
+         <div>
+         <h3 class="titulo_galeria">Galeria de fotos</h3>
+         </div>
+         
+         <section id="slider">
+          
+        
+          <div id="caja">
+        
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="../../../assets/img/j.jpg" class="d-block w-100 img-fluid" alt="astrofotografia">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/astro10.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/k.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/l.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/astro6.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/astro7.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/j.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/k.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/l.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/m.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/n.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/o.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/p.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="../../../assets/img/astro9.jpg" class="d-block w-100 img-fluid" alt="...">
+                </div>
+              </div>
+            </div>
+        
           </div>
-          <div class="carousel-inner"></div>
-          <div class="carousel-item active">
-           <img src="../../../assets/img/j.jpg" class="d-block w-100"
-            class="img-fluid" alt="astrofotografia">
-          </div>
-          <div class="carousel-item">
-           <img src="../../../assets/img/astro10.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/k.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/l.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/astro6.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/astro7.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/j.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/k.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/l.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/m.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/n.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="../../../assets/img/o.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-           <img src="../../../assets/img/p.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-          <div class="carousel-item">
-           <img src="../../../assets/img/astro9.jpg" class="d-block w-100"
-            class="img-fluid" alt="...">
-          </div>
-        </div>
-
-     </section>
+        
+        </section>
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
