--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -12,9 +12,7 @@
               <img
                 src="/assets/img/profile.svg"
                 class="img-thumbnail"
-                alt=""
-                srcset=""
-              />
+                alt=""/>
             </div>
           </div>
           <div class="mb-3">
