--- a/frontend/src/app/shared/nav/nav.component.html
+++ b/frontend/src/app/shared/nav/nav.component.html
@@ -12,7 +12,7 @@
             <a class="nav-link" [routerLink]="['/home']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-house"></i> Inicio</a>
           </li>
           <li class="nav-item dropdown ">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-sharp fa-solid fa-map-location"></i>
               Areas turisticas
             </a>
             <ul class="dropdown-menu">
@@ -26,7 +26,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-sharp fa-solid fa-person-walking-luggage"></i>
               Actividades turisticas
             </a>
             <ul class="dropdown-menu">
@@ -38,7 +38,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-sharp fa-solid fa-box"></i>
               Paquetes turisticos
             </a>
             <ul class="dropdown-menu">
@@ -57,7 +57,7 @@
             <a class="nav-link" [routerLink]="['/contacto']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-address-book"></i> Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/login']" routerLinkActive="activebutton">Login</a>
+            <a class="nav-link" [routerLink]="['/login']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-right-to-bracket"></i> Login</a>
           </li>
 
         </ul>
