--- a/frontend/src/app/vistas/pagina404/pagina404.component.html
+++ b/frontend/src/app/vistas/pagina404/pagina404.component.html
@@ -1,1 +1,8 @@
-<p>pagina404 works!</p>
+<div class="container fluid">
+    <div class="row mx-auto ">
+        <div class="col-12 text-center">
+           <h1>La pagina que busca no existe o no se encuentra disponible. Verifique la URL</h1>
+           <img src="assets/img/404.png" class="img-thumbnail" alt="pagina de error 404">
+        </div>
+    </div>
+</div>
