--- a/frontend/src/app/shared/nav/nav.component.html
+++ b/frontend/src/app/shared/nav/nav.component.html
@@ -38,7 +38,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/paquete-turisticos']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-box"></i> Paquete turistico</a>
+            <a class="nav-link" [routerLink]="['/paquete-turisticos']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-box"></i> paquete turistico</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/sobre-nosotros']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-address-card"></i> Sobre nosotros</a>
