--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -12,7 +12,14 @@
               <img
                 src="/assets/img/profile.svg"
                 class="img-thumbnail"
-                alt=""/>
+
+               alt=""
+                srcset=""
+              />
+
+               
+
+
             </div>
           </div>
           <div class="mb-3">
