--- a/frontend/src/app/shared/nav/nav.component.html
+++ b/frontend/src/app/shared/nav/nav.component.html
@@ -37,18 +37,11 @@
               <li><a class="dropdown-item" [routerLink]="['/turismo-religioso']">Turismo Religioso</a></li>
             </ul>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-sharp fa-solid fa-box"></i>
-              Paquetes turisticos
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-cba']">paquete turistico cba</a></li>
-              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-cpaz']">paquete turistico cpaz</a></li>
-              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-la-cumbrecita']">Paquete turistico la
-                  cumbrecita</a></li>
-              <li><a class="dropdown-item" [routerLink]="['/paquete-turistico-traslasierra']">Paquete turistico
-                  traslasierra</a></li>
-            </ul>
+
+
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/paquete-turisticos']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-box"></i> paquete turistico</a>
+
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/sobre-nosotros']" routerLinkActive="activebutton"><i class="fa-sharp fa-solid fa-address-card"></i> Sobre nosotros</a>
