--- a/frontend/src/app/vistas/parques-nacionales/parques-nacionales.component.html
+++ b/frontend/src/app/vistas/parques-nacionales/parques-nacionales.component.html
@@ -1,3 +1,9 @@
+<div>
+
+    <div id="portada">
+        <h1>Parque Nacionales</h1>
+    </div> 
+
 <section class="caja1">
     <h3>Parque Nacionales</h3><br>
     <h3>Parque Nacional Quebrada del Condorito</h3>
@@ -90,3 +96,5 @@
         </div>
     </div>
 </section>
+
+</div>
