--- a/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.css
+++ b/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.css
@@ -82,6 +82,15 @@ ul{
 }
 
 /*PARTE NUEVA*/
+
+.title{
+	text-align: center;
+}
+
+.formato{
+	font-weight: bold ;
+}
+
 .paquete{
     text-decoration: none;
     color: black;   
