--- a/frontend/src/app/vistas/sobre-nosotros/sobre-nosotros.component.html
+++ b/frontend/src/app/vistas/sobre-nosotros/sobre-nosotros.component.html
@@ -1,10 +1,1 @@
-<main>
-  <p class="texto">
-      <h2>Quienes somos</h2>
-      <p>Somos una empresa dedicada al rubro turistico en la Provincia de Cordoba, brindando a nuestros clientes las distintas experiencias que posee esta hermosa Ciudad.</p> <br>
-      <p>A traves de nuestra pagina web, podras adquirir paquetes turisticos como el ser alojamiento, visitas guiadas y gastronomia regional, recibiendo asi la mejor atencion y recibimiento por parte de esta hermosa ciudad. </p>
-
-</main>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+<p>sobre-nosotros works!</p>
