se cargan nuevos datos Pablo

--- a/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
+++ b/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
@@ -8,6 +8,14 @@
 
         </li>
     </ul>
+
+    <ul>
+        <li class="formato" *ngFor="let item of data2">
+            {{ item.name }}
+
+        </li>
+    </ul>
+
     </div>   
     
 </section>
