mi parte de frontend

--- a/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
+++ b/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
@@ -16,6 +16,13 @@
         </li>
     </ul>
 
+    <ul>
+        <li class="formato" *ngFor="let item of dataSofia">
+            {{ item.name }}
+
+        </li>
+    </ul>
+
     </div>   
     
 </section>
