añadido mi parte de frontend

--- a/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
+++ b/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
@@ -23,6 +23,12 @@
         </li>
     </ul>
 
+    <ul>
+        <li class="formato" *ngFor="let item of dataApi">
+            {{ item.name }}
+        </li>
+    </ul>
+
     </div>   
     
 </section>
