--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,4 +1,3 @@
-
 <div class="container position-relative">
   <div class="row vh-100 d-flex justify-content-center align-items-center">
     <div class="col-12 text-center">
@@ -57,69 +56,15 @@
                 <div *ngIf="password.errors?.['required']">
                   La contraseña es requerida.
                 </div>
+
+                <div *ngIf="password.errors?.['minlength']">
+                  La contraseña debe tener un minimo de 8 caracteres.
+                </div>
               </div>
 
           </div>
           <div class="d-grid mb-3 mt-5">
             <button type="submit" (click)="login()" class="btn btn-success fw-bold">
-              Enviar
-            </button>
-          </div>
-        </fieldset>
-        <p>¿No tienes cuenta?</p>
-        <div class="d-grid">
-          <button type="submit" class="btn btn-warning fw-bold">
-            <a class="nav-link" [routerLink]="['/registro']">Registrate</a>
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-
-<div class="container position-relative">
-  <div class="row vh-100 d-flex justify-content-center align-items-center">
-    <div class="col-12 text-center">
-      <h1>Bienvenido a Conociendo Córdoba</h1>
-    </div>
-    <div class="col-12 col-md-4">
-      <form class="border p-3">
-        <fieldset>
-          <legend class="text-center fs-1"></legend>
-          <div class="row">
-            <div class="col-4 mx-auto">
-              <img
-                src="/assets/img/profile.svg"
-                class="img-thumbnail"
-
-               alt=""
-                srcset=""
-              />
-
-               
-
-            </div>
-          </div>
-          <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input
-              type="text"
-              id="email"
-              class="form-control"
-              placeholder="example@gmail.com"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Contraseña</label>
-            <input
-              type="password"
-              id="password"
-              class="form-control"
-              placeholder="password123"
-            />
-          </div>
-          <div class="d-grid mb-3 mt-5">
-            <button type="submit" class="btn btn-success fw-bold">
               Enviar
             </button>
           </div>
