--- a/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
+++ b/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
@@ -43,6 +43,10 @@
             </ng-container>
     </div>   
     </a>
+   <div class="ubicacion">
+        <button type="submit" class="btn btn-primary boton">Comprar</button>
+        <button type="submit" class="btn btn-primary boton1" [routerLink]="['/paquete-turistico-cpaz']">Descripción</button>
+    </div>
 </section>
 
 
@@ -71,6 +75,10 @@
             </ng-container>
     </div>   
     </a>
+  <div class="ubicacion">
+    <button type="submit" class="btn btn-primary boton">Comprar</button>
+    <button type="submit" class="btn btn-primary boton1" [routerLink]="['/paquete-turistico-la-cumbrecita']">Descripción</button>
+</div>
 </section>
 
 <!--catedral1.jpg-->
@@ -98,6 +106,10 @@
         </ng-container>
 </div>   
 </a>
+<div class="ubicacion">
+    <button type="submit" class="btn btn-primary boton">Comprar</button>
+    <button type="submit" class="btn btn-primary boton1" [routerLink]="['/paquete-turistico-cba']">Descripción</button>
+</div>
 </section>
 
 <!--PARTE NUEVA 3-->
@@ -125,4 +137,8 @@
         </ng-container>
 </div>   
 </a>
+<div class="ubicacion">
+    <button type="submit" class="btn btn-primary boton">Comprar</button>
+    <button type="submit" class="btn btn-primary boton1" [routerLink]="['/paquete-turistico-traslasierra']">Descripción</button>
+</div>  
 </section>
