--- a/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
+++ b/frontend/src/app/vistas/paquetes-turisticos/paquetes-turisticos.component.html
@@ -52,7 +52,7 @@
 
 <!--src="./assets/img/la cumbrecita.jpg-->
 
-<section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-la-cumbrecita']">
+<section class="oferta">>
     <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/la cumbrecita.jpg" alt="Catedral de Córdoba">
     </div>
     <div class="nombrepaquete" *ngIf="productos">
@@ -63,6 +63,7 @@
     <p> fecha: {{ producto.fecha }}</p>
     <p>Idioma: Ingles, Español</p>
     <p>Modalidad: Cancelacion Gratuita</p>
+    <button type="submit" class="btn btn-primary boton"(click)="agregarAlCarrito(producto)">Agregar al carrito</button>
         </div>       
         </ng-container>
     </div>
@@ -74,12 +75,12 @@
             </div>       
             </ng-container>
     </div>   
-    </a>
+    
 </section>
 
 <!--catedral1.jpg-->
 
-<section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-cba']">
+<section class="oferta"> >
 <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/catedral1.jpg" alt="Catedral de Córdoba">
 </div>
 <div class="nombrepaquete" *ngIf="productos">
@@ -90,6 +91,7 @@
 <p> fecha: {{ producto.fecha }}</p>
 <p>Idioma: Ingles, Español</p>
 <p>Modalidad: Cancelacion Gratuita</p>
+<button type="submit" class="btn btn-primary boton"(click)="agregarAlCarrito(producto)">Agregar al carrito</button>
     </div>       
     </ng-container>
 </div>
@@ -101,12 +103,12 @@
         </div>       
         </ng-container>
 </div>   
-</a>
+
 </section>
 
 <!--PARTE NUEVA 3-->
 
-<section class="oferta"> <a class="paquete" [routerLink]="['/paquete-turistico-traslasierra']">
+<section class="oferta">
 <div class="fotopaquete"> <img class="anchofoto" src="./assets/img/Nacimiento del rio Mina Clavero.jpg" alt="Catedral de Córdoba">
 </div>
 <div class="nombrepaquete" *ngIf="productos">
@@ -117,6 +119,7 @@
 <p> fecha: {{ producto.fecha }}</p>
 <p>Idioma: Ingles, Español</p>
 <p>Modalidad: Cancelacion Gratuita</p>
+<button type="submit" class="btn btn-primary boton"(click)="agregarAlCarrito(producto)">Agregar al carrito</button>
     </div>       
     </ng-container>
 </div>
@@ -128,5 +131,5 @@
         </div>       
         </ng-container>
 </div>   
-</a>
+
 </section>
